# p3a

./: .gitignore  CMakeLists.txt  LICENSE  P3AConfig.cmake.in  P3AConfigVersion.cmake.in  README.md  config.cmake.in  gtest-main.C  kul.hpp  kul_iostream.hpp  kul_unit_tests.cpp  p3a-config-version.cmake.in  p3a-config.cmake.in  p3a.hpp  p3a_allocator.hpp  p3a_array.hpp  p3a_avx512.hpp  p3a_axis_angle.hpp  p3a_box3.hpp  p3a_cg.cpp  p3a_cg.hpp  p3a_constants.hpp  p3a_counting_iterator.hpp  p3a_cstring.hpp  p3a_device_ptr.hpp  p3a_diagonal3x3.hpp  p3a_dimension.hpp  p3a_dynamic_array.hpp  p3a_dynamic_matrix.hpp  p3a_eigen.hpp  p3a_error_code.hpp  p3a_execution.cpp  p3a_execution.hpp  p3a_exp.hpp  p3a_fixed_point.cpp  p3a_fixed_point.hpp  p3a_for_each.hpp  p3a_functional.hpp  p3a_functions.hpp  p3a_grid3.hpp  (+62 more)
